# laplace

./: .clang-format  CMakeLists.txt  diagram.json  wokwi.toml
server/: Cargo.toml
server/src/: main.rs
src/: CMakeLists.txt  main.c  mpu6050.c  mpu6050.h  serial.c  serial.h
